fixes #76 jump in icon with input button

--- a/src/elements/input.less
+++ b/src/elements/input.less
@@ -288,6 +288,9 @@
   box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1) inset;
   white-space: nowrap;
 }
+.ui.action.input > .button > .icon {
+  display: inline;
+}
 
 .ui.action.input > input:focus ~ .button {
   opacity: 1;
